@@ -6,25 +6,30 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class translator {
 
     public static String translate(String langFrom, String langTo, String text) throws IOException {
         // INSERT YOU URL HERE
-        String urlStr = "https://script.google.com/macros/s/AKfycbxwY6aueLCHwSd7cmUtxH41s9KNfFCImq-uCTBpR0UH-WyMwjLiHBdVwn8VaRsgHEV3MQ/exec" +
-                "?q=" + URLEncoder.encode(text, "UTF-8") +
-                "&target=" + langTo +
-                "&source=" + langFrom;
-        URL url = new URL(urlStr);
-        StringBuilder response = new StringBuilder();
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
-        con.setRequestProperty("User-Agent", "Mozilla/5.0");
-        BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-        String inputLine;
-        while ((inputLine = in.readLine()) != null) {
-            response.append(inputLine);
+        try {
+            String urlStr = "https://script.google.com/macros/s/AKfycbxwY6aueLCHwSd7cmUtxH41s9KNfFCImq-uCTBpR0UH-WyMwjLiHBdVwn8VaRsgHEV3MQ/exec" +
+                    "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) +
+                    "&target=" + langTo +
+                    "&source=" + langFrom;
+            URL url = new URL(urlStr);
+            StringBuilder response = new StringBuilder();
+            HttpURLConnection con = (HttpURLConnection) url.openConnection();
+            con.setRequestProperty("User-Agent", "Mozilla/5.0");
+            BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
+            String inputLine;
+            while ((inputLine = in.readLine()) != null) {
+                response.append(inputLine);
+            }
+            in.close();
+            return response.toString();
+        } catch(Exception e) {
+            return "Network may not be connected";
         }
-        in.close();
-        return response.toString();
     }
 }
